--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Expense Tracker</h1>
-        <form id="expense-form" action="add_expense.php" method="POST">
+        <form id="expense-form" action="src/add_expense.php" method="POST">
             <div class="form-control">
                 <label for="description">Description</label>
                 <input type="text" id="description" name="description" required>
@@ -18,11 +18,20 @@
                 <label for="amount">Amount</label>
                 <input type="number" id="amount" name="amount" step="0.01" min="0" required>
             </div>
+            <div class="form-control">
+                <label for="total_parcelas">Total de Parcelas</label>
+                <input type="number" id="total_parcelas" name="total_parcelas" min="1" value="1" required>
+            </div>
+            <div class="form-control">
+                <label for="parcela_atual">Parcela Atual</label>
+                <input type="number" id="parcela_atual" name="parcela_atual" min="1" value="1" required>
+            </div>
             <button type="submit">Add Expense</button>
         </form>
-        <ul id="expense-list"></ul>
+        <button id="show-expenses-button">Show Expenses</button>
+        <ul id="expense-list" style="display: none;"></ul>
         <h2>Total: $<span id="total-amount">0.00</span></h2>
     </div>
-    <script src="script.js"></script>
+    <script src="public/script.js"></script>
 </body>
 </html>
