separacao do container ShowExp, espacamento e format na data

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,10 @@
             <button type="submit">Add Expense</button>
         </form>
         <button id="show-expenses-button">Show Expenses</button>
-        <ul id="expense-list" style="display: none;"></ul>
         <h2>Total: $<span id="total-amount">0.00</span></h2>
+    </div>
+    <div class="expense-list-container" id="expense-list-container" style="display: none;">
+        <ul id="expense-list"></ul>
     </div>
     <script src="script.js"></script>
 </body>
